@@ -841,6 +841,11 @@ Flags to put in the FCFLAGS environment variable when invoking the configure scr
 .br
 .Sy Default:
 .Em -O2
+.It Ic configure.classpath
+Flags to put in the CLASSPATH environment variable when invoking the configure script.
+.br 
+.Sy Type:
+.Em optional
 .It Ic configure.cc
 C-compiler to put in the CC environment variable when invoking the configure script.
 .br
@@ -871,6 +876,11 @@ Fortran-77-compiler to put in the F77 environment variable when invoking the con
 .Em optional
 .It Ic configure.f90
 Fortran-90-compiler to put in the F90 environment variable when invoking the configure script.
+.br
+.Sy Type:
+.Em optional
+.It Ic configure.javac
+Java compiler to put in the JAVAC environment variable when invoking the configure script.
 .br
 .Sy Type:
 .Em optional
